--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -91,8 +91,52 @@
              </svg>
          </div>
      </div>
+     <div id="feedback-modal" class="modal-box">
+         <div class="modal-content">
+             <div class="modal-content__top">
+                 <div class="mob-cross">
+                     <div class="mob-cross-line"></div>
+                     <div class="mob-cross-line"></div>
+                 </div>
+             </div>
+             <div class="feedback-modal__title">
+                 Оставьте свои<br>
+                 контакты<br>
+                 для связи
+             </div>
+             <div class="feedback-modal__form">
+                 <input class="input-text" type="text" name="name" placeholder="Вашу имя" autocomplete="off">
+                 <input class="input-text" type="text" name="phone" placeholder="+7 ( ___ ) ___ - __ - __" autocomplete="off">
+                 <input class="input-text" type="text" name="comment" placeholder="Комментарий" autocomplete="off">
+             </div>
+             <a href="#" class="primary-button">
+                 <div class="slide-up-in-view__container">
+                     <div class="primary-button__text slide-up-in-view duration-1" data-sr-id="0" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: all, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
+                         <div class="primary-button__text-animation">отправить заявку</div>
+                     </div>
+                 </div>
+                 <div class="primary-button__circle-anchor show" data-sr-id="114" style="visibility: visible;">
+                     <div class="primary-button__circle-animation">
+                         <div class="primary-button__circle"></div>
+                     </div>
+                 </div>
+                 <div class="slide-up-in-view__container">
+                     <div class="primary-button__arrow slide-up-in-view duration-1 " data-sr-id="2" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: all, opacity 1s cubic-bezier(0.5, 0, 0, 1), transform 1s cubic-bezier(0.5, 0, 0, 1);">
+                         <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                             <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                             <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                         </svg>
+                     </div>
+                 </div>
+             </a>
+
+         </div>
+         <div class="modal-content__bottom">
+             <img src="../assets/images/modal.png" alt="">
+         </div>
+     </div>
      <div id="container">
-         <div data-anchor="custom-design" class="mb-8 white-header fade-in">
+         <div data-anchor="custom-design" class="mb-8 white-header giga-white-header fade-in">
              <section class="main-view">
                  <div class="section-bg">
                      <img src="../assets/images/069_DSCF4268-HDR.png" alt="">
@@ -112,7 +156,7 @@
                              </div>
                          </div>
                          <div class="animation-button-height animation-height">
-                             <div class="round-button"></div>
+                             <div call-modal="feedback-modal" class="round-button"></div>
                          </div>
                      </div>
                      <div class="main-view__gray-line"><div class="gray-line"></div></div>
@@ -549,7 +593,7 @@
                             <div class="services-list">
                                 <div class="services-list__item mb-4">
                                     <div class="services-list__item-animation">
-                                        <div class="services-list__img-wrapper">
+                                        <div class="services-list__img-wrapper white-header">
                                             <img src="../assets/images/service1.png" alt="">
                                         </div>
                                         <div class="services-list__name">Дизайн интерьера</div>
@@ -567,7 +611,7 @@
                                 </div>
                                 <div class="services-list__item">
                                     <div class="services-list__item-animation">
-                                        <div class="services-list__img-wrapper">
+                                        <div class="services-list__img-wrapper white-header">
                                             <img src="../assets/images/service3.png" alt="">
                                         </div>
                                         <div class="services-list__name">Комплектация</div>
